Fix z-index stacking for toasts

--- a/packages/cx/src/widgets/overlay/Toast.scss
+++ b/packages/cx/src/widgets/overlay/Toast.scss
@@ -101,7 +101,7 @@
    $state: map-get($besm, state);
 
    .#{$block}#{$name} {
-      position: fixed;
+      position: absolute;
       left: 0;
       top: 0;
       right: 0;
@@ -110,6 +110,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      overflow: hidden;
 
       &.#{$state}placement-right {
          justify-content: center;
